# Lebenslaufakte

./: .gitignore  crud.py  main.py  models.py  pyproject.toml  replit.md  requirements.txt  schemas.py  seed.py
api/: index.py
templates/: admin_dashboard.html  admin_employee_form.html  admin_employees.html  base.html  dashboard.html  issue_created.html  issue_detail.html  issue_new.html  machine_created.html  machine_detail.html  machine_new.html  maintenance_created.html  maintenance_new.html  public_machine.html
