[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "email-validator>=2.3.0",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "qrcode[pil]>=8.2",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]
